Done with front-end

--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R-P-S Game</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Burned&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <h1>Welcome To Rock Paper Scissor Game</h1>
+        <h3>This Game Is A Part Of My Odin Project's Assignment</h3>
+    </header>
+    <main> 
+        <div class="first">
+            <h1>Press The Button Below To Start</h1>
+            <button>Lets Start</button>
+        </div>
+        <div class="second">
+            <h1>Select Your Option</h1>
+            <div class="image-sec">
+                <div class="images"><img src="img/rock.png" alt="Error"></div>
+                <div class="images"><img src="img/paper.png" alt="Error"></div>
+                <div class="images"><img src="img/scissor.png" alt="Error"></div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        Copyright &copy; 2024 | All Rights Reserved | Creator: Hammad Ali
+    </footer>
 </body>
 </html>
