fixed footer bug

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         </div>
     </main>
     <footer>
-        Copyright &copy; 2024 | All Rights Reserved | Creator: Hammad Ali
+        Copyright &copy; <script>document.write(new Date().getFullYear())</script> | All Rights Reserved | Creator: Hammad Ali
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
